tests/baselines/reference/asyncArrowFunction6_es6.errors.txt
asyncArrowFunction6_es6.ts(1,22): error TS2524: 'await' expressions cannot be used in a parameter initializer.
asyncArrowFunction6_es6.ts(1,27): error TS1109: Expression expected.


==== asyncArrowFunction6_es6.ts (2 errors) ====
    var foo = async (a = await): Promise<void> => {
                         ~~~~~
!!! error TS2524: 'await' expressions cannot be used in a parameter initializer.
                              ~
!!! error TS1109: Expression expected.
    }